[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bashgate"
version = "0.1.0"
description = "Claude Code PreToolUse hook that screens bash commands with path validation"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Mog Nesbitt" }]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/mogest/bashgate"
Repository = "https://github.com/mogest/bashgate"
Issues = "https://github.com/mogest/bashgate/issues"

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
bashgate = "bashgate:main"

[tool.setuptools]
py-modules = ["bashgate"]

[tool.pytest.ini_options]
testpaths = ["."]
